# harness

./: .gitignore  README.md  config.example.yaml  llm_harness_mvp_idea.md  pyproject.toml
harness/: cli.py  config.py  context.py  events.py  logger.py  loop.py  main.py  messages.py  sessions.py
providers/: base.py  fake_provider.py  openai_compat_provider.py
storage/: jsonl_store.py
tests/: conftest.py  test_context.py  test_echo_tool.py  test_fake_provider.py  test_jsonl_store.py  test_loop.py  test_openai_compat_provider.py  test_sessions.py  test_tool_registry.py
tools/: base.py  echo_tool.py  registry.py
